--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <a href="project.html" class="nav-item nav-link">Project</a> -->
           <div class="nav-item dropdown">
             <a
-              href="#"
+              href="project.html"
               class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
               >Prodcts</a
@@ -700,18 +700,18 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Products</h5>
-            <a class="btn btn-link" href="">DGPS</a>
-            <a class="btn btn-link" href="">Total Station</a>
-            <a class="btn btn-link" href="">Autolevel</a>
-            <a class="btn btn-link" href="">3D Scanner</a>
-            <a class="btn btn-link" href="">GPR</a>
-            <a class="btn btn-link" href="">Drone</a>
+            <a class="btn btn-link" href="feature.html">DGPS</a>
+            <a class="btn btn-link" href="feature.html">Total Station</a>
+            <a class="btn btn-link" href="feature.html">Autolevel</a>
+            <a class="btn btn-link" href="feature.html">3D Scanner</a>
+            <a class="btn btn-link" href="feature.html">GPR</a>
+            <a class="btn btn-link" href="feature.html">Drone</a>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Quick Links</h5>
             <a class="btn btn-link" href="#">Home</a>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Products</a>
+            <a class="btn btn-link" href="about.html">About Us</a>
+            <a class="btn btn-link" href="feature.html">Products</a>
             <a class="btn btn-link" href="">Contact Us</a>
           </div>
           <div class="col-lg-3 col-md-6">
