--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
                         <small class="fa fa-envelope-open text-white"></small>
                     </div>
-                    <small>info@example.com</small>
+                    <small>info@geoengineerings.in</small>
                 </div>
             </div>
             <div class="col-lg-6 text-end">
@@ -75,7 +75,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h2 class="m-0 text-primary">Geo Engineering</h2>
+            <!-- <h2 class="m-0 text-primary">Geo Engineering</h2> -->
+            <img src="img/geo-logo.png" alt="Geo Engineers">
+
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -87,12 +89,12 @@
                 <div class="nav-item dropdown">
                     <a href="feature.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="feature.html" class="dropdown-item">DGPS</a>
-                        <a href="feature.html" class="dropdown-item">Total Station</a>
-                        <a href="feature.html" class="dropdown-item">Autolevel</a>
-                        <a href="feature.html" class="dropdown-item">3D Scanner</a>
-                        <a href="feature.html" class="dropdown-item">GPR</a>
-                        <a href="feature.html" class="dropdown-item">Drone</a>
+                        <a href="feature.html#dgps" class="dropdown-item">DGPS</a>
+                        <a href="feature.html#totalStation" class="dropdown-item">Total Station</a>
+                        <a href="feature.html#autoLevel" class="dropdown-item">Autolevel</a>
+                        <a href="feature.html#3dScanner" class="dropdown-item">3D Scanner</a>
+                        <a href="feature.html#gpr" class="dropdown-item">GPR</a>
+                        <a href="feature.html#drone" class="dropdown-item">Drone</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -186,8 +188,11 @@
                     <div class="p-lg-5 pe-lg-0">
                         <div class="bg-primary mb-3" style="width: 60px; height: 2px;"></div>
                         <h1 class="display-5 mb-4">About Us</h1>
-                        <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-                        <div class="row g-4 mb-4 pb-3">
+                        <p class="mb-4 pb-2">Welcome to <strong>Geo Engineering</strong>! We are a dedicated team of professionals who are passionate about what we do. Our goal is to provide the best possible products and services to our customers, and we are committed to exceeding their expectations.
+                        </p>  
+                        <p class="mb-4 pb-2">At <strong>Geo Engineering</strong>, we are committed to providing our customers with the best possible products and services. That's why we are offering the opportunity to request a quote for one of our top-quality products. Simply fill out the form below and one of our team members will be in touch to provide you with a personalized quote. Don't miss out on the chance to experience the exceptional performance and quality of our products. Request a quote today!
+                        </p>                      
+                        <!-- <div class="row g-4 mb-4 pb-3">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="d-flex align-items-center">
                                     <div class="btn-square bg-white rounded-circle" style="width: 64px; height: 64px;">
@@ -210,8 +215,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <a href="" class="btn btn-primary rounded-pill py-3 px-5">Explore More</a>
+                        </div> -->
+                        <!-- <a href="" class="btn btn-primary rounded-pill py-3 px-5">Explore More</a> -->
                     </div>
                 </div>
             </div>
@@ -221,7 +226,7 @@
 
 
     <!-- Team Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="bg-primary mb-3 mx-auto" style="width: 60px; height: 2px;"></div>
@@ -294,7 +299,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Team End -->
         
 
@@ -316,12 +321,12 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Products</h5>
-                    <a class="btn btn-link" href="">DGPS</a>
-                    <a class="btn btn-link" href="">Total Station</a>
-                    <a class="btn btn-link" href="">Autolevel</a>
-                    <a class="btn btn-link" href="">3D Scanner</a>
-                    <a class="btn btn-link" href="">GPR</a>
-                    <a class="btn btn-link" href="">Drone</a>
+                    <a class="btn btn-link" href="feature.html#dgps">DGPS</a>
+                    <a class="btn btn-link" href="feature.html#totalStation">Total Station</a>
+                    <a class="btn btn-link" href="feature.html#autoLevel">Autolevel</a>
+                    <a class="btn btn-link" href="feature.html#3dScanner">3D Scanner</a>
+                    <a class="btn btn-link" href="feature.html#gpr">GPR</a>
+                    <a class="btn btn-link" href="feature.html#drone">Drone</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
@@ -353,7 +358,7 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">Shaik Ahmed Irshad</a>
+                    Designed By <a class="border-bottom" href="https://github.com/shaik-ahmed-irshad">Shaik Ahmed Irshad</a>
             </div>
                 </div>
             </div>
