--- a/feature.html
+++ b/feature.html
@@ -475,6 +475,51 @@
     </div>
     <!-- Feature End -->
 
+    <!-- contact section -->
+    <div class="container-xxl py-5" id="contact">
+      <div class="container">
+          <div class="row g-5 justify-content-center mb-5">
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                  <div class="bg-light text-center h-100 p-5">
+                      <div class="btn-square bg-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
+                          <i class="fa fa-phone-alt fa-2x text-primary"></i>
+                      </div>
+                      <h4 class="mb-3">Phone Number</h4>
+                      <p class="mb-2">+91 99666 65892 </p>
+                      <a class="btn btn-primary px-4" href="tel:+91-9966665892">Call Now <i class="fa fa-arrow-right ms-2"></i></a>
+                      <div class="whatsapp-btn-container">
+                        <a class="btn btn-primary px-4 my-2 whatsapp-btn" href="https://wa.me/919966665892"  target="_blank">WhatsApp Now  <i class="bi bi-whatsapp "></i></a>
+                      </div> 
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                  <div class="bg-light text-center h-100 p-5">
+                      <div class="btn-square bg-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
+                          <i class="fa fa-envelope-open fa-2x text-primary"></i>
+                      </div>
+                      <h4 class="mb-3">Email Address</h4>
+                      <p class="mb-2">info@geoengineerings.in</p><br/>
+                      <!-- <p class="mb-4">support@example.com</p> -->
+                      <a class="btn btn-primary px-4" href="mailto:info@geoengineerings.in">Email Now <i
+                              class="fa fa-arrow-right ms-2"></i></a>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                  <div class="bg-light text-center h-100 p-5">
+                      <div class="btn-square bg-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
+                          <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
+                      </div>
+                      <h4 class="mb-3">Office Address</h4>
+                      <p class="mb-2">Hill Colony, Mehdipatnam, Hyderabad </p>
+                      <a class="btn btn-primary px-4" href="https://maps.google.com/maps?q=geo%20institute%20of%20technolog&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                          target="blank">Direction <i class="fa fa-arrow-right ms-2"></i></a>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
+
+
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-secondary footer py-5 wow fadeIn"
